--- a/colorgame.css
+++ b/colorgame.css
@@ -16,9 +16,34 @@ body {
 	-moz-transition: background 0.6s;
 }
 
+.a > .square {
+	width: 45%;
+	padding-bottom: 45%;
+	margin-left: 20px;
+}
+
+.b > .square {
+	width: 20%;
+	padding-bottom: 20%;
+	margin-left: 20px;
+}
+
+.c > .square {
+	width: 15%;
+	padding-bottom: 15%;
+	margin-left: 20px;
+}
+
+.d > .square {
+	width: 12.5%;
+	padding-bottom: 12.5%;
+	margin-left: 15px;
+}
+
 #container {
 	margin: 20px auto;
-	max-width: 600px;
+	max-width: 700px;
+
 }
 
 h1 {
@@ -43,6 +68,7 @@ h1 {
 	text-align: center;
 	color: black;
 	font-weight: 700;
+	padding-left: 100px;
 }
 
 .selected {
@@ -81,9 +107,19 @@ button:hover {
 	display: inline-block;
 	width: 25%;
 	text-align: center;
-	margin-left: 80px;
+	margin-left: 130px;
+	margin-right: -70px;
 
 
 
 }
 
+#reset {
+	display: inline-block;
+	text-align: center;
+	margin-left: -90px;
+
+
+
+
+}
